--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --colors --progress"
+    "dev": "concurrently 'babel-node ./src/Api/index.js' 'webpack-dev-server --colors --progress'"
   },
   "repository": {
     "type": "git",
@@ -21,15 +21,22 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.2",
-    "redux": "^3.7.2"
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-promise": "^0.5.3",
+    "redux-router": "^2.1.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.17.2",
+    "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
     "eslint-plugin-react": "^7.1.0",
     "express": "^4.15.3",
